--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
 </div>
 <div id="details">
     <h2>Name: Christine Oure</h2>
-    <h2>Profession: UI/UX Designer</h2>
+    <h2>Profession: Data Scientist</h2>
     <h2>Company: Poa</h2>
     <h2>Nationality: Kenyan</h2>
     <h2>Interests: Drawing and Reading sci-fi Books</h2>
