--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <div id="form_div">
 
-<div id="container2">
+<div id="intro">
     <h1>Hello!</h1>
     <h1> Welcome back!!</h1>
     <p>Don't have an Account Yet?</p>
-    <button type="sign up" id="signup_button"><a href="/landing.html">Sign In</a></button>
+    <button type="sign up" id="signup_button"><a href="/signup.html">Sign In</a></button>
 </div>
 
 <form id="login_form" action="/landing.html">
@@ -23,10 +23,8 @@
       <input name="text" placeholder="Username" type="text" id="input" required/>
       <label for="Password">Password</label>
       <input type="Password" placeholder="Password" id="input" required/>
-      <div id="checkbox">
-     <input type="checkbox" id="checkbox"><b>Remember Me</b>
-      </div>
       <button type="log in" id="login_button">Log In</button>
+      </div>
  </form>
 </div>
 </body>
