--- a/to-do.html
+++ b/to-do.html
@@ -23,7 +23,7 @@
         <span onclick="newElement()" class="addBtn">Add</span>
     </div>
     <ul id="myUL">
-        <li>(NYJ)Summary of Born A Crime</li>
+        <a href="/Nyj.html">Summary of Born A Crime</a>
     </ul>
   <script src="script.js"></script>
   </div>
