--- a/Nyj.html
+++ b/Nyj.html
@@ -26,36 +26,29 @@
 <p>TREVOR’S MOM</p>
 <p>
 <h4>1. RACISM</h4>
-In chapters 1&2 of the story Born a Crime, Trevor Noah describes his childhood life.
-He was born in South Africa in the year 1984 during a period when the black South 
-Africans were divided into tribes. Trevor Noah narrates how he lived during the years
-before and the end of the apartheid system. These tribes had a history of conflict where
-the Zulu and the Xhosa were the most dominant tribes during the apartheid period. 
-(Apartheid is the legal system for racial segregation). The Zulu were mostly known as
-the warriors while the Xhosa were known as the intelligent. This is a major issue of 
-racism where some tribes are not allowed to have sexual relationships with another 
-tribe. Trevor was born to a black mother and a white father which was illegal and 
-would be punishable by the law.  This issue is visible in Machakos County where
-people from high social classes are not allowed to interact with people from low 
-social classes and also in Ukambani, people from a particular clan are not allowed 
-to intermarry with people from a particular clan since it is forbidden and is punishable.
+Trevor Noah recalls his youth in the first and second chapters of Born a Crime. He was born in
+South Africa in 1984, during a time when black South Africans were divided by apartheid. 
+Trevor describes his experiences during the end of apartheid. The many tribes had a long history
+of conflict, with the Zulus and Xhosa being the most dominant during apartheid. This is a serious 
+issue of ethnic discrimination. Trevor was born to a black mother and a white father which was illegal
+and was punishable by imprisonment. 
+A similar issue of tribal and ethnic hate is evident in present-day Machakos County, where some tribal 
+clans hate each other and cannot intermarry. 
+
 </p>
 
 <div>
 <h4>2. CHRISTIANITY</h4>
 <p>
-Trevor’s mother was so much into Christianity and she would take the whole family to multiple
-churches. She claimed that each church offered something different from the rest of the churches 
-where they had some bit of racial demographics. Trevor goes ahead to say that he enjoyed going 
-to church to watch the pastor cast demons out of people. These churches were the black church, 
-the white church, and the mixed church. Trevor’s mother would never be intimidated by anything 
-so easily since her faith in God was unwavering. They would have to attend the church no matter 
-what comes their way. On one occasion, their car broke down and they had to board a minibus. 
-Trevor kept on insisting that maybe the Lord did not want them to go to church on that particular
-day but that could not stop the mother from attending the church services. This is evident in
-Machakos County where people believe in going to different churches for spiritual growth. 
-Whereas others just go to church for fun to watch when the spiritual teachers are casting demons
-out of people.
+    Trevor’s mother was so much into Christianity and she would take the whole family to 
+    multiple churches. These churches were the black church, the white church, and the mixed church. 
+    Trevor’s mother would never be intimidated by anything so easily since her faith in God was
+    unwavering. This is evident in Machakos County where churches are found on every street corner, 
+    with each priest preaching about his Faith that will save all from the fires of hell. Each Sunday
+    loud blares of speakers are heard from every corner keeping those around awake. Some people attend 
+    two different churches each Sunday to pray.
+    There is so much similarity between the present world and back then.
+    
 </p>
 </div>
 </div>
